fixed footer wrapping

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ footer {
   display: flex;
   justify-content: center;
   background-color: #ff3b3f;
+  flex-wrap: wrap;
 }
 
 footer a {
@@ -104,7 +105,7 @@ footer a {
   color: black;
   text-decoration: none;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 /* Tablet styling */
